Make simulation more efficient and add relative moment to frequency slice

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -129,7 +129,8 @@
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
     "#exp_name = \"2021_02_23_wall\"\n",
-    "exp_name = \"2021_02_25_wall\"\n",
+    "#exp_name = \"2021_02_25_wall\"\n",
+    "exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2021_02_19_windows';\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
@@ -172,25 +173,38 @@
     "from wall_detector import WallDetector, normalized_std\n",
     "from frequency_analysis import get_index_matrix\n",
     "\n",
+    "\n",
     "mag_thresh = 1.0 # tested for 25_* and 23_* dataset\n",
     "ymin = 1e-4\n",
     "ymax = 3e2\n",
+    "degree = 0\n",
     "if len(df_all.distance.unique()) > 1:\n",
     "    distance = 20\n",
+    "    chosen_dict = {\n",
+    "        \"degree\": degree, \n",
+    "        \"distance\": distance, \n",
+    "    }\n",
     "else:\n",
     "    distance = df_all.iloc[0].distance\n",
-    "degree = 0\n",
+    "    print('using unique distance', distance)\n",
+    "    chosen_dict = {\n",
+    "        \"degree\": degree, \n",
+    "    }\n",
     "\n",
-    "chosen_dict = {\n",
-    "    \"degree\": degree, \n",
-    "    \"distance\": distance, \n",
-    "    #\"motors\": \"all45000\",\n",
-    "    #\"mic_type\": \"measurement\"\n",
-    "    #\"mic_type\": \"audio_deck\"\n",
-    "}\n",
+    "#chosen_dict[\"motors\"] = \"all45000\"\n",
+    "#chosen_dict[\"mic_type\"] = \"measurement\"\n",
+    "#chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
     "\n",
     "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
+    "\n",
+    "filter_by_motors = filter_by_mic_type = filter_by_appendix = False\n",
+    "if len(df_filtered.motors.unique()) > 1:\n",
+    "    filter_by_motors = True\n",
+    "if len(df_filtered.mic_type.unique()) > 1:\n",
+    "    filter_by_mic_type = True\n",
+    "if len(df_filtered.appendix.unique()) > 1:\n",
+    "    filter_by_appendix = True\n",
     "\n",
     "verbose = False\n",
     "\n",
@@ -207,7 +221,15 @@
     "        if (mic_type == \"measurement\") and (row.snr == 1):  # this is no \"real snr\"\n",
     "            continue\n",
     "\n",
-    "        title = f'{row.mic_type} {row.motors}{row.appendix.replace(\"_\", \" \")} distance{row.distance}cm mic{mic}'\n",
+    "            \n",
+    "        label = title = \"\"\n",
+    "        if filter_by_mic_type:\n",
+    "            label += f\"{mic_type}, \"\n",
+    "        if filter_by_motors:\n",
+    "            label += f\"motors={row.motors}\"\n",
+    "        if filter_by_appendix:\n",
+    "            label += f\"{row.appendix.replace('_', ' ')} \"\n",
+    "        label += f\"mic{mic}\"\n",
     "\n",
     "        # processing\n",
     "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
@@ -242,14 +264,13 @@
     "        )\n",
     "        ax.set_xlabel(\"time [s]\")\n",
     "        ax.set_ylabel(\"frequency [Hz]\")\n",
-    "        ax.set_title(title)\n",
+    "        ax.set_title(label)\n",
     "        save_fig(\n",
     "            fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_spec.png\"\n",
     "        )\n",
     "\n",
     "        df_mic = wall_detector.df[wall_detector.df.mic == mic]\n",
     "        \n",
-    "        label = f\"{mic_type}, motors={row.motors}\"\n",
     "        stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(normalized_std).values\n",
     "        #stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
     "        medians = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanmedian).values\n",
@@ -264,7 +285,7 @@
     "\n",
     "        fig_raw, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
     "        ax.set_ylim(ymin, ymax)\n",
-    "        ax.set_title(title)\n",
+    "        ax.set_title(label)\n",
     "        save_fig(\n",
     "            fig_raw, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png\"\n",
     "        )\n",
@@ -273,7 +294,7 @@
     "        frequencies = np.sort(df_mic.frequency.unique())\n",
     "        fig_std, ax = plt.subplots()\n",
     "        ax.plot(frequencies, normalized_stds, marker='o')\n",
-    "        ax.set_title(title)\n",
+    "        ax.set_title(label)\n",
     "        \n",
     "ax_slice.set_ylabel('amplitude')\n",
     "ax_slice.set_xlabel(\"frequency [Hz]\")\n",
@@ -281,7 +302,7 @@
     "ax_slice.set_ylim(1e-1, 1e2)\n",
     "ax_slice.grid(which=\"both\")\n",
     "\n",
-    "title = f'distance {row.distance}cm mic{mic}'\n",
+    "title = f'distance={row.distance}cm mic{mic}'\n",
     "ax_slice.set_title(title)\n",
     "#ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "ax_slice.legend()\n",
@@ -364,8 +385,8 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "exp_name = \"2021_02_23_wall\"\n",
-    "#exp_name = \"2021_02_25_wall\"\n",
+    "#exp_name = \"2021_02_23_wall\"\n",
+    "exp_name = \"2021_02_25_wall\"\n",
     "\n",
     "# mic_type = 'measurement'\n",
     "mic_type = \"audio_deck\"\n",
