--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -150,51 +150,13 @@
    "outputs": [],
    "source": [
     "from simulation import generate_room\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "room = generate_room(distance_cm=50, yaw_deg=0, ax=ax, single_mic=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(1, 2)\n",
-    "fig.set_size_inches(10, 5)\n",
-    "room = generate_room(distance_cm=0, yaw_deg=0, ax=axs[0])\n",
-    "axs[0].set_title(0)\n",
-    "room = generate_room(distance_cm=0, yaw_deg=90, ax=axs[1])\n",
-    "axs[1].set_title(90)\n",
-    "axs[0].legend(loc=\"lower left\")\n",
-    "axs[1].legend(loc=\"lower left\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "room = generate_room(distance_cm=50, single_mic=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "room.compute_rir()\n",
-    "\n",
-    "n_times = 500\n",
-    "times = np.arange(n_times) / FS * 1e3\n",
-    "plt.plot(times, room.rir[0][0][:n_times])\n",
-    "plt.title(\"room impulse response\")\n",
-    "plt.xlabel(\"time [ms]\")\n",
-    "plt.show()"
+    "angles = [0, 20, 90]\n",
+    "fig, axs = plt.subplots(1, len(angles), squeeze=False)\n",
+    "fig.set_size_inches(5*len(angles), 5)\n",
+    "for ax, angle in zip(axs.flatten(), angles):\n",
+    "    room = generate_room(distance_cm=0, yaw_deg=angle, ax=ax)\n",
+    "    ax.set_title(f'yaw{angle}')\n",
+    "    ax.legend(loc=\"lower left\")"
    ]
   },
   {
@@ -210,19 +172,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO(FD): below is potentially much faster than frequency slices.\n",
-    "# consider replacing distance-frequency matrix generation with these.\n",
+    "from simulation import get_df_theory_simple, get_deltas_from_global\n",
+    "fig, ax = plt.subplots()\n",
+    "for i in range(4):\n",
+    "    deltas = get_deltas_from_global(20, 0, i, ax)\n",
+    "ax.axvline(10, color='black', label='wall')\n",
+    "ax.legend()\n",
+    "ax.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
     "\n",
-    "distances_cm = np.linspace(0, 40, 20)\n",
+    "yaw_deg = 20\n",
+    "distances_cm = np.arange(20)\n",
     "frequency = 1000\n",
-    "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm)\n",
-    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm)\n",
-    "plt.figure()\n",
+    "\n",
+    "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
+    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
+    "fig, ax = plt.subplots()\n",
     "for i in range(Hs.shape[1]):\n",
-    "    plt.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
-    "    plt.semilogy(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
-    "plt.legend()"
+    "    ax.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
+    "    ax.semilogy(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
+    "ax.legend()"
    ]
   },
   {
@@ -252,13 +229,7 @@
     "    signal = signals[\"multi\"]\n",
     "    with progressbar.ProgressBar(max_value=len(distances) - 1) as bar:\n",
     "        for j, distance_cm in enumerate(distances):\n",
-    "            # room = generate_room(distance_cm=distance_cm, single_mic=True)\n",
-    "            # stft = get_stft(room, signal)\n",
-    "            # spec = np.sum(np.abs(stft), axis=1) / (stft.shape[1] * N_BUFFER) # times x frequencies\n",
-    "            # spec_time_avg = np.mean(spec, axis=0)\n",
-    "            # df_matrix[:, j] = spec_time_avg\n",
     "            slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
-    "            # df_matrix[:, j] = np.mean(slice_mics, axis=0)\n",
     "            df_matrix[:, j] = slice_mics[mic_idx]\n",
     "            bar.update(j)\n",
     "    series = pd.Series(\n",
@@ -321,7 +292,7 @@
     "df_matrix_theo = np.empty((len(frequencies), len(distances)))\n",
     "for j, distance_cm in enumerate(distances):\n",
     "    slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
-    "    df_matrix_theo[:, j] = slice_mics[mic_idx]\n",
+    "    df_matrix_theo[:, j] = slice_mics[:, mic_idx]\n",
     "    # H = generate_rir(frequencies, distance_cm=distance_cm, single_mic=False)[mic_idx] #\n",
     "    # df_matrix_theo[:, j] = np.abs(H)"
    ]
@@ -341,8 +312,8 @@
     "    df_matrix_theo[freq_start:freq_end, dist_start:dist_end],\n",
     "    freq,\n",
     "    dist,\n",
-    "    ymin=0.2,\n",
-    "    ymax=1.5,\n",
+    "    ymin=0.0,\n",
+    "    ymax=3.0,\n",
     ")"
    ]
   },
@@ -397,6 +368,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### vertical frequency slice"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -405,7 +383,7 @@
    "outputs": [],
    "source": [
     "from wall_detector import get_probability_cost, get_probability_fft\n",
-    "from simulation import get_real_distance\n",
+    "from simulation import get_deltas_from_global\n",
     "\n",
     "distance_slices = [5, 10, 20, 30, 40, 50]\n",
     "\n",
@@ -425,7 +403,8 @@
     "\n",
     "distances_grid = np.linspace(0, 70, 70)\n",
     "distances_real = [\n",
-    "    get_real_distance(distance_cm=d, mic_idx=mic_idx) / 2 for d in distances_grid\n",
+    "    get_deltas_from_global(yaw_deg=0, distances_cm=[d], mic_idx=mic_idx)[0]/2 * 100\n",
+    "    for d in distances_grid\n",
     "]\n",
     "\n",
     "fig, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
@@ -447,7 +426,7 @@
     "    p_cost_sparse = get_probability_cost(slice_sparse, freq_sparse, distances_grid)\n",
     "\n",
     "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
-    "    delta = get_real_distance(distance_cm=d, mic_idx=mic_idx)\n",
+    "    delta = get_deltas_from_global(yaw_deg=0, distances_cm=[d], mic_idx=mic_idx)[0] * 100\n",
     "\n",
     "    axs[i].set_ylabel(\"response\")\n",
     "    axs[i].plot(freq_cont, slice_cont, label=f\"{d}cm\", color=\"C0\")\n",
@@ -470,6 +449,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### non-vertical frequency slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nominal_distance = 10\n",
+    "nominal_yaw = 0\n",
+    "relative_distances = np.random.normal(0, 1, len(freq_sparse))\n",
+    "absolute_yaws = np.random.normal(0, 1, len(freq_sparse))\n",
+    "\n",
+    "deltas = get_deltas_from_global(yaw_deg=nominal_yaw, distances_cm=distances, mic_idx=mic_idx)\n",
+    "nominal_delta = get_deltas_from_global(nominal_yaw, nominal_distance, mic_idx)\n",
+    "\n",
+    "deltas_noisy = get_deltas_from_global(nominal_yaw+absolute_yaws, \n",
+    "                                nominal_distance+relative_distances, \n",
+    "                                mic_idx)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(deltas, frequencies, matrix[:-1, :-1])\n",
+    "ax.axvline(nominal_delta, color='C1')\n",
+    "ax.scatter(deltas_noisy, freq_sparse, color='C1')\n",
+    "ax.set_ylim(min(freq_sparse), max(freq_sparse))\n",
+    "\n",
+    "df_vert = get_df_theory_simple(nominal_delta, freq_sparse) \n",
+    "slice_f_vert = df_vert.flatten()\n",
+    "\n",
+    "df = get_df_theory_simple(deltas_noisy, freq_sparse) \n",
+    "slice_f = np.diag(df)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(freq_sparse, slice_f_vert, label='vertical')\n",
+    "plt.plot(freq_sparse, slice_f, label='noisy')\n",
+    "plt.legend()\n",
+    "\n",
+    "probs_rel = get_probability_cost(slice_f, freq_sparse, distances_grid, \n",
+    "                                 relative_ds=relative_distances, \n",
+    "                                 absolute_yaws=absolute_yaws)\n",
+    "probs = get_probability_cost(slice_f, freq_sparse, distances_grid)\n",
+    "plt.figure()\n",
+    "plt.plot(distances_grid, probs, label='ignore mvmt')\n",
+    "plt.plot(distances_grid, probs_rel, label='account for mvmt')\n",
+    "plt.yscale('log')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Noise study"
    ]
   },
@@ -479,25 +511,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from simulation import get_delta\n",
     "d0 = 5  # [cm]\n",
-    "\n",
-    "\n",
-    "def delta(d, beta, d0=5):\n",
-    "    \"\"\"\n",
-    "    :param d: orthogonal distance from wall\n",
-    "    :param beta: angle between mic-source and wall normal\n",
-    "    \"\"\"\n",
-    "    d = np.array([d]) if type(d) != np.ndarray else d\n",
-    "    beta = np.array([beta]) if type(beta) != np.ndarray else beta\n",
-    "    d1 = np.sqrt(\n",
-    "        d0 ** 2 + 4 * d[None, :] ** 2 - 4 * d[None, :] * d0 * np.cos(beta[:, None])\n",
-    "    )\n",
-    "    return d1 - d0\n",
-    "\n",
-    "\n",
     "d_arr = np.arange(5, 50, step=5)\n",
     "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
-    "delta_matrix = delta(d_arr, beta_arr, d0)\n",
+    "delta_matrix = get_delta(d_arr[None, :], beta_arr[:, None], d0)\n",
     "\n",
     "plt.figure()\n",
     "for j, d in enumerate(d_arr):\n",
@@ -515,23 +533,12 @@
    "outputs": [],
    "source": [
     "from plotting_tools import save_fig\n",
-    "\n",
-    "\n",
-    "def orthogonal_distance(delta, beta, d0=5):\n",
-    "    delta = np.array([delta]) if type(delta) != np.ndarray else delta\n",
-    "    beta = np.array([beta]) if type(beta) != np.ndarray else beta\n",
-    "    d1 = delta + d0\n",
-    "    d0cos = d0 * np.cos(beta)\n",
-    "    d = 0.5 * (\n",
-    "        d0cos[:, None] + np.sqrt(d0cos[:, None] ** 2 + d1[None, :] ** 2 - d0 ** 2)\n",
-    "    )\n",
-    "    return d\n",
-    "\n",
+    "from simulation import get_orthogonal_distance\n",
     "\n",
     "d0 = 5\n",
     "delta_arr = np.arange(10, 100, step=10)\n",
     "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
-    "d_matrix = orthogonal_distance(delta_arr, beta_arr, d0)\n",
+    "d_matrix = get_orthogonal_distance(delta_arr, beta_arr, d0)\n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(5, 5)\n",
