Add moving analysis to hover experiments

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -66,6 +66,9 @@
     "import seaborn as sns\n",
     "from plotting_tools import save_fig\n",
     "\n",
+    "min_time = 5\n",
+    "max_time = 30\n",
+    "\n",
     "max_dist = 50 # cm\n",
     "for i, row in df_total.iterrows():\n",
     "\n",
@@ -92,12 +95,14 @@
     "    axs[1].set_xlabel('time [s]')\n",
     "    axs[1].set_ylabel('movement [cm]')\n",
     "    axs[1].set_ylim(-max_dist, max_dist)\n",
+    "    axs[1].set_xlim(min_time, max_time)\n",
     "    axs[1].legend(loc='lower right')\n",
     "\n",
     "    axs[2].plot(row.seconds, row.positions[:, 3], label='yaw')\n",
     "    axs[2].set_ylabel('yaw [deg]')\n",
     "    axs[2].set_xlabel('time [s]')\n",
     "    axs[2].set_ylim(-20, 20)\n",
+    "    axs[2].set_xlim(min_time, max_time)\n",
     "    axs[2].legend(loc='lower right')\n",
     "\n",
     "    plt.tight_layout()\n",
@@ -151,11 +156,12 @@
     "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.suptitle(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
-    "    fig.set_size_inches(10, 5)\n",
+    "    fig.set_size_inches(5, 5)\n",
     "    ax.pcolorfast(row.seconds, \n",
     "                  all_frequencies, spec[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_ylim(min_freq, max_freq)\n",
+    "    ax.set_xlim(min_time, max_time)\n",
     "    \n",
     "    ax_tot.plot(all_frequencies, total, color=f\"C{i_col}\", label=label)\n",
     "ax_tot.legend(loc='upper right')\n",
@@ -181,7 +187,7 @@
     "df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
     "for j, distance_cm in enumerate(distances_grid):\n",
     "    slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
-    "    df_matrix_theo[:, j] = slice_mics[mic_idx]"
+    "    df_matrix_theo[:, j] = slice_mics[:, mic_idx]"
    ]
   },
   {
@@ -199,12 +205,11 @@
     "fig.set_size_inches(5, 5)\n",
     "fig_cost, ax_proba_cost = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
-    "fig_fft, ax_proba_fft = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
     "\n",
     "#appendix_plot = '-newbuzzer'\n",
-    "appendix_plot = '-paper'\n",
-    "#appendix_plot = '-nopaper'\n",
+    "#appendix_plot = '-paper'\n",
+    "appendix_plot = '-nopaper'\n",
+    "\n",
     "i_col = 0\n",
     "for _, row in df_total.iterrows():\n",
     "    \n",
@@ -216,10 +221,21 @@
     "    spec_masked, freqs_masked = wall_detector.fill_from_row(row)\n",
     "    \n",
     "    time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
-    "    nominal_distance = int(row.appendix.split('cm')[0][-2:])\n",
-    "    distances_y = row.positions[time_mask, 1] * 100 + nominal_distance \n",
     "    index_matrix = get_index_matrix(spec_masked)\n",
+    "    \n",
+    "    spec_masked = spec_masked[:, :, time_mask]\n",
+    "    \n",
+    "    nominal_distance = int(row.appendix.split('cm')[0][-2:])\n",
     "    strongest_freqs = freqs_masked[index_matrix[0, time_mask]]\n",
+    "    \n",
+    "    # extract \"moving\" \n",
+    "    f_slice_varying = [spec_masked[f_idx, mic_idx, idx] for idx, f_idx in enumerate(index_matrix[0, time_mask])]\n",
+    "    relative_ds = row.positions[time_mask, 1] * 100\n",
+    "    absolute_yaws = row.positions[time_mask, 3]\n",
+    "    assert len(f_slice_varying) == len(strongest_freqs)\n",
+    "    assert len(relative_ds) == len(f_slice_varying)\n",
+    "    \n",
+    "    distances_y = relative_ds + nominal_distance \n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
     "    ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
@@ -235,7 +251,7 @@
     "    fig, ax = plt.subplots()\n",
     "    ax.set_title(f'spectrogram of mic{mic_idx}, {label}')\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    ax.pcolorfast(row.seconds, \n",
+    "    ax.pcolorfast(row.seconds[time_mask], \n",
     "                  freqs_masked, spec[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_ylim(min_freq, max_freq)\n",
@@ -243,21 +259,23 @@
     "    wall_detector.remove_bad_freqs(verbose=True)\n",
     "    wall_detector.remove_spurious_freqs(verbose=True)\n",
     "    f_slice, freqs = wall_detector.get_frequency_slice()\n",
-    "    ax_slices.plot(freqs, f_slice[mic_idx, :], label=label)\n",
+    "    ax_slices.plot(freqs, f_slice[mic_idx, :], label=label, color=f'C{i_col}')\n",
+    "    ax_slices.scatter(strongest_freqs, f_slice_varying, label=label + ' varying', color=f'C{i_col}')\n",
     "    \n",
     "    proba_cost = get_probability_cost(\n",
     "        f_slice[mic_idx, :], freqs, distances_grid, mic_idx=mic_idx\n",
     "    )\n",
-    "    distances_fft, proba_fft = get_probability_fft(f_slice[mic_idx, :], freqs)\n",
+    "    proba_cost_mvmt = get_probability_cost(\n",
+    "        f_slice_varying, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
+    "    )\n",
     "    \n",
     "    ax_proba_cost.plot(distances_grid, proba_cost, label=label, color=f'C{i_col}')\n",
-    "    ax_proba_fft.plot(distances_fft, proba_fft, label=label, color=f'C{i_col}', ls=':')\n",
+    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt, label=label + ' varying', color=f'C{i_col}', ls=':')\n",
     "    i_col += 1\n",
     "    \n",
     "ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
     "\n",
     "ax_slices.legend(loc='upper left')\n",
-    "ax_proba_fft.legend(loc='upper left')\n",
     "[ax.legend(loc='upper left') for ax in [ax_proba_fft, ax_proba_cost]]\n",
     "[ax.set_ylabel('probability') for ax in [ax_proba_fft, ax_proba_cost]]\n",
     "[ax.set_xlabel('distance [cm]') for ax in [ax_proba_fft, ax_proba_cost]]\n",
